<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/lay_backgrounds"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/back"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="120dp"
            android:src="@drawable/logo"></ImageView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="465dp"
            android:layout_below="@+id/img_logo"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_account"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layo_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:text="@string/title"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold|normal" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lay_u_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_uname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/layo_title"
                    android:text="@string/u_name" />

                <EditText
                    android:id="@+id/edt_uname"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/tv_uname"
                    android:drawableRight="@drawable/ic_useu"
                    android:singleLine="true" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lay_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_emile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lay_u_name"
                    android:text="@string/emailid" />

                <EditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/tv_emile"
                    android:drawableRight="@drawable/ic_email"
                    android:inputType="textEmailAddress"
                    android:singleLine="true" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lay_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lay_email"
                    android:text="@string/password" />

                <EditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/tv_password"
                    android:drawableRight="@drawable/ic_password"
                    android:inputType="textPassword"
                    android:singleLine="true" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lay_buttn"
                android:layout_width="392dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/lay_password"
                android:layout_margin="4dp"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/cb_condition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/agree" />

                <TextView
                    android:id="@+id/tv_terms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="155dp"
                    android:layout_marginTop="-34dp"
                    android:text="@string/terms"
                    android:textColor="#FB7F1C"
                    android:textStyle="bold" />

                <android.widget.Button
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_terms"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="60dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/btn_submit"
                    android:text="@string/btn_sumit" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lay_medie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/media"
                    android:textAlignment="center"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lay_medieicon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:layout_marginBottom="100dp">

                <android.widget.ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="2"
                    android:padding="10dp"
                    android:src="@drawable/facebook" />

                <android.widget.ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="2"
                    android:padding="10dp"
                    android:src="@drawable/twitter" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/lay_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/login"
                android:textStyle="bold"
                android:textAlignment="center"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/logi1"
                android:textColor="#FB7F1C"
                android:layout_marginTop="-19dp"
                android:textAlignment="textEnd"
                android:layout_marginRight="80dp"
                android:textStyle="bold"
                />

        </LinearLayout>

    </LinearLayout>
    </RelativeLayout>